# ZapPaw

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: lib.rs  main.rs
src/auth/: mod.rs
src/chat/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/media/: mod.rs
src/messages/: mod.rs
src/notifications/: mod.rs
src/routes/: mod.rs
