[package]
name = "ZapPaw"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
actix-web = "4"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
redis = "0.21"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.4"
jsonwebtoken = "8"
validator = "0.16"
dotenv = "0.15"